// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets all workshops 1`] = `
Object {
  "workshops": Array [
    Object {
      "description": "This is the conversation workshop description.",
      "levels": Array [
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
      ],
      "name": "Conversation",
      "options": Array [
        Object {
          "available": true,
          "day": "Lunes",
          "id": "1",
          "teacher_name": "Fulanito",
          "time": "1300 - 14:00",
          "url": "http://url1",
          "workshop_name": "Conversation",
          "zoom_id": null,
        },
        Object {
          "available": true,
          "day": "Martes",
          "id": "2",
          "teacher_name": "Fulanito",
          "time": "13:00 - 14:00",
          "url": "http://url2",
          "workshop_name": "Conversation",
          "zoom_id": null,
        },
      ],
    },
  ],
}
`;

exports[`reservations makes a reservation 1`] = `
Array [
  1,
  1,
  null,
]
`;

exports[`reservations makes a reservation 2`] = `
Object {
  "makeWorkshopReservation": Object {
    "day": "Lunes",
    "id": "1",
    "teacher_id": "teacher_id1",
    "teacher_name": "Fulanito",
    "time": "1300 - 14:00",
    "url": "http://url1",
    "workshop_id": "workshop_id1",
    "workshop_name": "Conversation",
    "zoom_id": null,
  },
}
`;

exports[`reservations makes a tutorials reservation 1`] = `
Array [
  1,
  1,
  "negative questions",
]
`;

exports[`reservations makes a tutorials reservation 2`] = `
Object {
  "makeWorkshopReservation": Object {
    "day": "Lunes",
    "id": "1",
    "teacher_id": "teacher_id1",
    "teacher_name": "Fulanito",
    "time": "1300 - 14:00",
    "url": "http://url1",
    "workshop_id": "workshop_id1",
    "workshop_name": "Conversation",
    "zoom_id": null,
  },
}
`;

exports[`student data already registered 1`] = `
Object {
  "student": Object {
    "nombre": "Alberto",
    "reservation": Object {
      "day": "Lunes",
      "teacher_name": "Fulanito",
      "time": "1300 - 14:00",
      "url": "http://url1",
      "workshop_name": "Conversation",
    },
  },
}
`;

exports[`student data normal not registered 1`] = `
Object {
  "student": Object {
    "nombre": "Benito Antonio",
    "reservation": null,
  },
}
`;

exports[`teacher dashboard no reservations 1`] = `
Object {
  "teacher": Object {
    "id": "3",
    "name": "Sutanito",
    "options": Array [
      Object {
        "day": "Lunes",
        "id": "5",
        "reservations": null,
        "time": "13:00 - 14:00",
        "url": "https://meet.google.com/sutanitolink1",
      },
      Object {
        "day": "Martes",
        "id": "6",
        "reservations": null,
        "time": "13:00 - 14:00",
        "url": "https://meet.google.com/sutanitolink2",
      },
      Object {
        "day": "Viernes",
        "id": "21",
        "reservations": null,
        "time": "13:00 - 14:00",
        "url": "https://meet.google.com/sutanitolink3",
      },
    ],
  },
}
`;

exports[`teacher dashboard normal 1`] = `
Object {
  "teacher": Object {
    "id": "4",
    "name": "Gonzalo",
    "options": Array [
      Object {
        "day": "Miercoles",
        "id": "7",
        "reservations": Array [
          Object {
            "apellido_materno": "Ocasio",
            "apellido_paterno": "Martinez",
            "codigo": "1234509876",
            "grupo": "E4-1",
            "nivel": "4",
            "nombre": "Benito Antonio",
          },
        ],
        "time": "13:00 - 14:00",
        "url": "https://meet.google.com/ukv-avjt-qiy",
      },
      Object {
        "day": "Jueves",
        "id": "8",
        "reservations": Array [
          Object {
            "apellido_materno": "Ocasio",
            "apellido_paterno": "Martinez",
            "codigo": "1234509876",
            "grupo": "E4-1",
            "nivel": "4",
            "nombre": "Benito Antonio",
          },
        ],
        "time": "13:00 - 14:00",
        "url": "https://meet.google.com/ukv-avjt-qiy",
      },
      Object {
        "day": "Martes",
        "id": "22",
        "reservations": Array [
          Object {
            "apellido_materno": "Ocasio",
            "apellido_paterno": "Martinez",
            "codigo": "1234509876",
            "grupo": "E4-1",
            "nivel": "4",
            "nombre": "Benito Antonio",
          },
        ],
        "time": "13:00 - 14:00",
        "url": "https://meet.google.com/kux-jhii-eyi",
      },
    ],
  },
}
`;

exports[`teacher links page dashboard 1`] = `
Object {
  "teacher": Object {
    "id": "4",
    "name": "Gonzalo",
    "options": Array [
      Object {
        "day": "Miercoles",
        "id": "7",
        "reservations": Array [
          Object {
            "codigo": "1234509876",
            "nombre": "Benito Antonio",
          },
        ],
        "time": "13:00 - 14:00",
        "workshop_name": "Conversation",
      },
      Object {
        "day": "Jueves",
        "id": "8",
        "reservations": Array [
          Object {
            "codigo": "1234509876",
            "nombre": "Benito Antonio",
          },
        ],
        "time": "13:00 - 14:00",
        "workshop_name": "Conversation",
      },
      Object {
        "day": "Martes",
        "id": "22",
        "reservations": Array [
          Object {
            "codigo": "1234509876",
            "nombre": "Benito Antonio",
          },
        ],
        "time": "13:00 - 14:00",
        "workshop_name": "Tutoring",
      },
    ],
  },
}
`;

exports[`teacher links page names and ids 1`] = `
Object {
  "teachers": Array [
    Object {
      "id": "1",
      "name": "Fulanito",
    },
    Object {
      "id": "2",
      "name": "Menganito",
    },
  ],
}
`;
